[gd_scene load_steps=7 format=3 uid="uid://bx16igf5inj5u"]

[ext_resource type="Script" path="res://scripts/vending_machine.gd" id="1_12jrp"]
[ext_resource type="PackedScene" uid="uid://c025lr5sbmmnn" path="res://assets/kenney/GLB format/vending-machine.glb" id="1_uxvem"]
[ext_resource type="FontFile" uid="uid://c6ibhdq20lcf6" path="res://assets/kenney/Kenney UI Pack/Font/Kenney Future Narrow.ttf" id="2_abhy6"]
[ext_resource type="PackedScene" uid="uid://bmji7qiha54yt" path="res://scenes/in_game_ui.tscn" id="3_aksp6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5u043"]
size = Vector3(0.502063, 0.747949, 0.4)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2a0jm"]
radius = 0.6
height = 2.2

[node name="Vending Machine" type="StaticBody3D"]
script = ExtResource("1_12jrp")

[node name="vending-machine2" parent="." instance=ExtResource("1_uxvem")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05474e-05, 0.373975, 1.49012e-08)
shape = SubResource("BoxShape3D_5u043")

[node name="PressLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visibility_range_begin = 1.0
text = "press: E
↓"
font = ExtResource("2_abhy6")
font_size = 20
outline_size = 7

[node name="inGameUI" parent="." instance=ExtResource("3_aksp6")]
MainText = "Für thirsty bois!"
NameText = "Vending Machine"

[node name="ContextCollider" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ContextCollider"]
shape = SubResource("CapsuleShape3D_2a0jm")
